<resources>

    <!-- Strings para construção das telas-->
    <string name="app_name">Alimente-Se Bem</string>
    <string name="noticias">Notícias</string>
    <string name="agenda">Agenda</string>
    <string name="forum">Fórum</string>
    <string name="config">configurações</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastra-se</string>
    <string name="google">Continuar com Google</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="telfone">Telefone</string>
    <string name="confirmaSenha">Confirma Senha</string>
    <string name="videos">Vídeos</string>
    <string name="logoff">logoff</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="preco">Preço</string>
    <string name="enviar">Enviar</string>
    <string name="entre_com_sua_mensagem">Entre com sua mensagem</string>
    <string name="realizacao">Realização</string>
    <string name="label_autor">Aberto por: </string>

    <!-- Strings relacionads as API de JSON -->
    <string name="falha_de_acesso">Falha ao acessar servidor </string>
    <string name="noticias_null">Não há notícias a serem mostradas !</string>
    <string name="videos_null">Não há videos a serem mostrados !</string>
    <string name="foruns_null">Não há fóruns a serem mostrados !</string>
    <string name="agenda_null">Não há agenda a serem mostrados !</string>
    <string name="regarregar">Recarregar</string>
    <string name="sucesso_cadastro">Cadastro realizado com sucesso</string>

    <!-- Strings relacionadas a login e cadastro -->
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="erro_email_invalido">Email inválido</string>
    <string name="erro_senha_incorreta">Senha incorreta</string>
    <string name="erro_senha_n_preechida">Preencha sua senha</string>
    <string name="erro_confirma_n_preechida">Preencha sua confirmação de senha</string>
    <string name="erro_email_n_preechida">Preencha com o seu seu email</string>
    <string name="erro_nome_n_preechida">Preencha com o seu Nome</string>
    <string name="erro_cofirma_igual_senha">Senha deve ser igual a confirmação</string>
    <string name="erro_senha_deve_conter">Senha deve conter no minimo 8 caracteres</string>
    <string name="email_e_senha_invalidos">Email e/ou senha invalidos !</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings relacionadas as ordenações-->
    <string name="ordem_default">Data</string>
    <string name="ordem_titulo">Ordem de exibição</string>
    <string name="ordem_key">ORDEM_DA_LISTA_AGENDA</string>
    <string name="ordem_sumario">Define a ordem de listagem</string>

    <string name="filtro_titulo">Filtros</string>
    <string name="filtro_key">FILTRO_HABILITADO</string>

    <string-array name="ordem_itens">
        <item>Titulo</item>
        <item>Data</item>
    </string-array>
    <string name="categoria">Categoria</string>
    <string name="titulo">Titulo</string>

    <!-- facebook -->
    <string name="facebook_app_id">395228594279087</string>
    <string name="fb_login_protocol_scheme">fb395228594279087</string>
    <string name="facebook">Continuar com Facebook</string>


</resources>
